--- a/tasktrail/src/styles/components/settings.sass
+++ b/tasktrail/src/styles/components/settings.sass
@@ -73,6 +73,9 @@
         color: $TT-grey-lighter !important
     .home-deadline, .home-board
         background-color: $TT-grey-dark !important
+    .home-panel .notification
+        color: $TT-grey-lighter !important
+        background-color: $TT-grey-dark !important
 
     // Kanban
     .card
@@ -402,6 +405,10 @@
     .home-stat strong, .home-panel strong, .home-panel small, .home-deadline time
         color: $TT-white !important
     .home-deadline, .home-board
+        background-color: $TT-black !important
+        box-shadow: inset 0 0 0px 1px $TT-white !important
+    .home-panel .notification
+        color: $TT-white !important
         background-color: $TT-black !important
         box-shadow: inset 0 0 0px 1px $TT-white !important
 
